# cnxvalidate

./: .gitignore  Algorithm.md  CMakeLists.txt  README.md  nxvmain.c  tofraw.h5
include/: nxvalidate.h  nxvhash.h
src/: CMakeLists.txt  Makefile  minimal.c  nxdlutil.c  nxvcontext.c  nxvcontext.h  nxvfield.c  nxvgroup.c  nxvmainloop.c  nxvutil.c
test/: CMakeLists.txt  runvalgrind.tcl  testbasics.cpp  testdepends.cpp  testgroup.cpp  testlink.cpp  testmain.cpp  testsimpleatt.cpp  testunidim.cpp  testutil.cpp  testutil.hpp
test/data/: NXdepends.nxdl.xml  NXgroup.nxdl.xml  NXlink.nxdl.xml  NXminimal.nxdl.xml  NXrecurse.nxdl.xml  NXsimpleatt.nxdl.xml  NXsuper.nxdl.xml  NXtransformations.nxdl.xml  NXunidim.nxdl.xml  README.md  badtimeattributes.h5  depends.h5  dssimpleatt.h5  dsunidim.h5  fileattributes.h5  group.h5  inherit.h5  link.h5  makebasicfiles.py  makedataunitdim.py  makedepends.py  makefileatttestfiles.py  makegroupfiles.py  makelinkfiles.py  makesimpleatt.py  manyentries.h5  misgroup.h5  nofileattributes.h5  recurse.h5  shittyapp.h5  subNOdef.h5  subentry.h5  varlen.h5  writer_2_1.hdf5
